# cross-host-ops

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  build.rs  config.example.toml  server.example.toml
docs/: architecture.md  cli-to-rhopd-architecture.md  cli-to-xhod-architecture.md  jump-host-redesign.md  usage.md
docs/cn/: usage.md  (+1 more)
proto/: rhop.proto  xho.proto
src/: cli.rs  config.rs  copy_frames.rs  daemon.rs  exit_codes.rs  lib.rs  output.rs  pool.rs  protocol.rs  remote.rs  types.rs
tests/: edge_tests.rs  in_process_rpc_test.rs  jumpserver_e2e.rs  prop_cli_combined_it_flag.rs  prop_cli_deprecated_aliases.rs  prop_cli_duration.rs  prop_cli_exec_argv.rs  prop_cli_host_validation.rs  prop_cli_tty_flag_aliases.rs  prop_config_tty_stdin.rs  prop_effective_stdin_decision.rs  prop_effective_tty_decision.rs  prop_error_text_passthrough.rs  prop_exec_pty_passthrough.rs  prop_exec_pty_preservation.rs  prop_exit_code_propagation.rs  prop_gateway_auth_prompter.rs  prop_gateway_construction.rs  prop_gateway_error_classification.rs  prop_gateway_jumpserver_list.rs  prop_gateway_list_servers.rs  prop_gateway_list_servers_merge.rs  prop_gateway_pool_reuse.rs  prop_gateway_transport_retry.rs  prop_integration_p1_p4.proptest-regressions  prop_integration_p1_p4.rs  prop_interactive_mode_detection.rs  prop_interactive_mode_entry.rs  prop_interactive_mutual_exclusion.rs  prop_jumpserver_shell_preserved.rs  prop_list_servers_isolation.rs  prop_list_servers_order.rs  prop_multi_candidate_dispatch.rs  prop_ndjson_output.rs  prop_prefix_source.rs  prop_resolver_multi_colon.rs  prop_rhopd_merged_preference.rs  prop_rhopd_single_subsystem.rs  prop_rhopd_wire_identity.rs  prop_shell_flag_resolution.rs  (+18 more)
(+98 files in other folders)
