[package]
name = "cross-host-ops"
version = "0.2.2"
edition = "2024"

[lib]
name = "xho"
path = "src/lib.rs"

[[bin]]
name = "xho"
path = "src/bin/xho.rs"

[[bin]]
name = "xhod"
path = "src/bin/xhod.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2.9"
getrandom = "0.4"
hkdf = "0.12"
home = "0.5"
hmac = "0.12"
hyper-util = { version = "0.1", features = ["tokio"] }
indicatif = "0.17"
libc = "0.2"
parking_lot = "0.12"
prost = "0.14"
rand = "0.8"
rand_core = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = { version = "0.60", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2"
terminal_size = "0.4"
thiserror = "1.0"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.8"
toml_edit = "0.22"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.19", features = ["serde", "v4"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
